--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ h1 { display:none;}
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 5%;
+    /* padding: 2%; */
     z-index: 1; 
     transform: translateY(-50%);
     opacity: 0;
@@ -99,7 +99,13 @@ h1 { display:none;}
 }
 
 #tugmov iframe {
-     width:90%; height: 30vh; border-radius: 20px; margin:auto;margin-top:5%; margin-bottom:5%; object-fit:cover;
+    width:90%; 
+    height: 30vh; 
+    border-radius: 20px; 
+    margin:auto; 
+    margin-top:5%; 
+    margin-bottom:5%; 
+    object-fit:cover;
 }
 
 /* footer {
@@ -114,9 +120,10 @@ h1 { display:none;}
 } */
 
 button { 
-    background-color: rgba(255, 255, 255, 0); height: 10%; width: 20%;
+    background-color: rgba(255, 255, 255, 0); height: 10%; /* width: 50%; */
     font-size: 1rem; border:none; /* border:2px solid blue; */
-    width:100px; height: 100px;
+    width:80px; height: 50px;
+    animation: movex 0.5s infinite alternate both;
 }
 
 button:hover {
@@ -137,6 +144,16 @@ button:hover {
     height: 5vh;
     animation: slideIn 2.5s forwards;
     background-color: rgb(250, 225, 190);
+}
+
+@keyframes movex {
+    from {
+        transform: translateX(30px) scale(1.5);        
+    }
+
+    to {
+        transform: translateX(0px) scale(1);        
+    }
 }
 
 @keyframes slideIn {
